[package]
name = "libarchive-sys"
authors = ["Denis Deniz González <denis2.glez@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
bindgen = "0.59.2"
